--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -33,6 +33,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.0.0
+
   build-win:
     runs-on: windows-latest
 
@@ -57,6 +60,9 @@ jobs:
           files: target/release/nit.exe
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.0.0
 
   build-mac:
     runs-on: macos-latest
@@ -84,3 +90,6 @@ jobs:
             target/release/nit_darwin
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.0.0
