--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,118 +1,184 @@
-name: Release
+# The way this works is the following:
+#
+# The create-release job runs purely to initialize the GitHub release itself
+# and to output upload_url for the following job.
+#
+# The build-release job runs only once create-release is finished. It gets the
+# release upload URL from create-release job outputs, then builds the release
+# executables for each supported platform and attaches them as release assets
+# to the previously created release.
+#
+# The key here is that we create the release only once.
+#
+# Reference:
+# https://eugene-babichenko.github.io/blog/2020/05/09/github-actions-cross-platform-auto-releases/
 
+name: release
 on:
   push:
+    # Enable when testing release infrastructure on a branch.
+    # branches:
+    # - ag/work
     tags:
-      - v*
-
-env:
-  CARGO_TERM_COLOR: always
-
+    - "[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  publish-to-github:
-    name: Publish to Github
-    runs-on: ${{matrix.os}}
+  create-release:
+    name: create-release
+    runs-on: ubuntu-latest
+    # env:
+      # Set to force version number, e.g., when no tag exists.
+      # RG_VERSION: TEST-0.0.0
+    outputs:
+      upload_url: ${{ steps.release.outputs.upload_url }}
+      rg_version: ${{ env.RG_VERSION }}
+    steps:
+      - name: Get the release version from the tag
+        shell: bash
+        if: env.RG_VERSION == ''
+        run: |
+          # Apparently, this is the right way to get a tag name. Really?
+          #
+          # See: https://github.community/t5/GitHub-Actions/How-to-get-just-the-tag-name/m-p/32167/highlight/true#M1027
+          echo "RG_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          echo "version is: ${{ env.RG_VERSION }}"
+      - name: Create GitHub release
+        id: release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.RG_VERSION }}
+          release_name: ${{ env.RG_VERSION }}
+
+  build-release:
+    name: build-release
+    needs: ['create-release']
+    runs-on: ${{ matrix.os }}
+    env:
+      # For some builds, we use cross to test on 32-bit and big-endian
+      # systems.
+      CARGO: cargo
+      # When CARGO is set to CROSS, this is set to `--target matrix.target`.
+      TARGET_FLAGS: ""
+      # When CARGO is set to CROSS, TARGET_DIR includes matrix.target.
+      TARGET_DIR: ./target
+      # Emit backtraces on panics.
+      RUST_BACKTRACE: 1
+      # Build static releases with PCRE2.
+      PCRE2_SYS_STATIC: 1
     strategy:
       matrix:
+        build: [linux, linux-arm, macos, win-msvc, win-gnu, win32-msvc]
         include:
         - build: linux
-          os: ubuntu-latest
-          rust: stable
+          os: ubuntu-18.04
+          rust: nightly
           target: x86_64-unknown-linux-musl
-          cross: false
-        - build: arm-v7
-          os: ubuntu-latest
-          rust: stable
-          target: armv7-unknown-linux-gnueabihf
-          linker: gcc-arm-linux-gnueabihf
-          cross: true
-        - build: aarch64
-          os: ubuntu-latest
-          rust: stable
-          target: aarch64-unknown-linux-gnu
-          linker: gcc-aarch64-linux-gnu
-          cross: true
+        - build: linux-arm
+          os: ubuntu-18.04
+          rust: nightly
+          target: arm-unknown-linux-gnueabihf
         - build: macos
           os: macos-latest
-          rust: stable
+          rust: nightly
           target: x86_64-apple-darwin
-          cross: false
+        - build: win-msvc
+          os: windows-2019
+          rust: nightly
+          target: x86_64-pc-windows-msvc
+        - build: win-gnu
+          os: windows-2019
+          rust: nightly-x86_64-gnu
+          target: x86_64-pc-windows-gnu
+        - build: win32-msvc
+          os: windows-2019
+          rust: nightly
+          target: i686-pc-windows-msvc
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
       with:
         fetch-depth: 1
 
-    - name: Cache
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          ~/.rustup
-          target
-        key: ${{ runner.os }}-${{ matrix.rust }}
-
-    - name: Install Linker
-      if: matrix.cross
+    - name: Install packages (Ubuntu)
+      if: matrix.os == 'ubuntu-18.04'
       run: |
-        sudo apt update
-        sudo apt install ${{ matrix.linker }}
-        cat .cargo/config.github >> .cargo/config
+        ci/ubuntu-install-packages
+
+    - name: Install packages (macOS)
+      if: matrix.os == 'macos-latest'
+      run: |
+        ci/macos-install-packages
 
     - name: Install Rust
-      run: |
-        rustup install ${{ matrix.rust }}
-        rustup target add ${{ matrix.target }}
-        rustup show
-
-    - name: Build
-      run: cargo build --release --target ${{ matrix.target }}
-
-    - name: Package Artifacts
-      run: |
-        src=$(pwd)
-        stage=
-        case $RUNNER_OS in
-            Linux)
-                stage=$(mktemp -d)
-                ;;
-            macOS)
-                stage=$(mktemp -d -t tmp)
-                ;;
-        esac
-
-        cp target/${{ matrix.target }}/release/sysit $stage/
-        cd $stage
-
-        RELEASE_VERSION=${GITHUB_REF#refs/tags/}
-        ASSET_NAME="sysit-$RELEASE_VERSION-${{ matrix.target }}.tar.gz"
-        ASSET_PATH="$src/$ASSET_NAME"
-        CHECKSUM_PATH="$ASSET_PATH.sha256"
-
-        echo "ASSET_PATH=$ASSET_PATH" >> $GITHUB_ENV
-        echo "CHECKSUM_PATH=$CHECKSUM_PATH" >> $GITHUB_ENV
-
-        tar czf $ASSET_PATH *
-
-        cd $src
-
-        case $RUNNER_OS in
-            Linux)
-                sha256sum $ASSET_NAME > $CHECKSUM_PATH
-                ;;
-            macOS)
-                shasum -a 256 $ASSET_NAME > $CHECKSUM_PATH
-                ;;
-        esac
-
-
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
+      uses: actions-rs/toolchain@v1
       with:
-        files: |
-          ${{ env.ASSET_PATH }}
-          ${{ env.CHECKSUM_PATH }}
+        toolchain: ${{ matrix.rust }}
+        profile: minimal
+        override: true
+        target: ${{ matrix.target }}
+
+    - name: Use Cross
+      shell: bash
+      run: |
+        cargo install cross
+        echo "CARGO=cross" >> $GITHUB_ENV
+        echo "TARGET_FLAGS=--target ${{ matrix.target }}" >> $GITHUB_ENV
+        echo "TARGET_DIR=./target/${{ matrix.target }}" >> $GITHUB_ENV
+
+    - name: Show command used for Cargo
+      run: |
+        echo "cargo command is: ${{ env.CARGO }}"
+        echo "target flag is: ${{ env.TARGET_FLAGS }}"
+        echo "target dir is: ${{ env.TARGET_DIR }}"
+
+    - name: Build release binary
+      run: ${{ env.CARGO }} build --verbose --release --features pcre2 ${{ env.TARGET_FLAGS }}
+
+    - name: Strip release binary (linux and macos)
+      if: matrix.build == 'linux' || matrix.build == 'macos'
+      run: strip "target/${{ matrix.target }}/release/rg"
+
+    - name: Strip release binary (arm)
+      if: matrix.build == 'linux-arm'
+      run: |
+        docker run --rm -v \
+          "$PWD/target:/target:Z" \
+          rustembedded/cross:arm-unknown-linux-gnueabihf \
+          arm-linux-gnueabihf-strip \
+          /target/arm-unknown-linux-gnueabihf/release/rg
+
+    - name: Build archive
+      shell: bash
+      run: |
+        outdir="$(ci/cargo-out-dir "${{ env.TARGET_DIR }}")"
+        staging="nit-${{ needs.create-release.outputs.rg_version }}-${{ matrix.target }}"
+        mkdir -p "$staging"/{complete,doc}
+
+        cp {README.md,COPYING,UNLICENSE,LICENSE-MIT} "$staging/"
+        cp {CHANGELOG.md,FAQ.md,GUIDE.md} "$staging/doc/"
+        cp "$outdir"/{rg.bash,rg.fish,_rg.ps1} "$staging/complete/"
+        cp complete/_rg "$staging/complete/"
+
+        if [ "${{ matrix.os }}" = "windows-2019" ]; then
+          cp "target/${{ matrix.target }}/release/rg.exe" "$staging/"
+          7z a "$staging.zip" "$staging"
+          echo "ASSET=$staging.zip" >> $GITHUB_ENV
+        else
+          # The man page is only generated on Unix systems. ¯\_(ツ)_/¯
+          cp "$outdir"/rg.1 "$staging/doc/"
+          cp "target/${{ matrix.target }}/release/rg" "$staging/"
+          tar czf "$staging.tar.gz" "$staging"
+          echo "ASSET=$staging.tar.gz" >> $GITHUB_ENV
+        fi
+
+    - name: Upload release archive
+      uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ needs.create-release.outputs.upload_url }}
+        asset_path: ${{ env.ASSET }}
+        asset_name: ${{ env.ASSET }}
+        asset_content_type: application/octet-stream
